--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+	<main>
+		<div class="card">
+			<div class="card-header"></div>
+				<img src="images/image-victor.jpg" alt="Profile Picture">
+				<div class="card-body">
+					<h1>Victor Crest <span class="age">26</span></h1>
+					<p>London</p>
+				</div>
+			<div class="card-footer">
+				<h4>80</h4>
+				<small>Followers</small>
+				<h4>803K</h4>
+				<small>Likes</small>
+				<h4>1.4K</h4>
+				<small>Photos</small>
+			</div>
+		</div>
+	</main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+		Coded by <a href="https://www.frontendmentor.io/profile/chloeGabriel">Chloe GABRIEL</a>.</p>
   </div>
 </body>
 </html>
